- Fixed issue where the panel header action doesn't right alignment differ from the panel subheader right alignment.

--- a/RockWeb/Styles/styles-v2/components/_panels.scss
+++ b/RockWeb/Styles/styles-v2/components/_panels.scss
@@ -1017,7 +1017,7 @@ ul.activeusers {
   .panel-heading {
 
     .panel-header-actions {
-      margin-right: 1rem !important;
+      margin-right: var(--spacing-xsmall) !important;
     }
 
     .panel-title {
