--- a/RockWeb/Styles/styles-v2/core.css
+++ b/RockWeb/Styles/styles-v2/core.css
@@ -8639,7 +8639,7 @@ ul.activeusers {
 }
 
 .panel .panel-heading .panel-header-actions {
-  margin-right: 1rem !important;
+  margin-right: var(--spacing-xsmall) !important;
 }
 .panel .panel-heading .panel-title small {
   color: var(--color-interface-medium);
@@ -15441,7 +15441,7 @@ textarea:focus,
 }
 .panel.panel-flex > .panel-heading .panel-header-actions > .action {
   padding-right: var(--spacing-medium);
-  margin: 2px;
+  margin: 0px;
   color: var(--color-interface-strong);
   transition: color 0.2s, background-color 0.2s, border-radius 0.2s;
 }
